# T-Core

./: .gitignore  CMakeLists.txt  PreLoad.cmake  README  THANKS  Todolist.txt  Todolist.txt.txt  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/icc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/compiler/xcode/: settings.cmake
cmake/macros/: CheckBuildDir.cmake  CheckPlatform.cmake  EnsureVersion.cmake  FindACE.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  FindReadline.cmake
cmake/platform/: cmake_uninstall.in.cmake  settings.cmake
cmake/platform/osx/: settings.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
contrib/extractor/: extractor.rar
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: SFMT.h  randomc.h
dep/StormLib/: CMakeLists.txt  StormCommon.h
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/adpcm/: CMakeLists.txt  adpcm.h
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt  Readme.txt
dep/gsoap/: CMakeLists.txt
dep/huffman/: CMakeLists.txt  huff.h
dep/jemalloc/: CMakeLists.txt
dep/jenkins/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/libtomcrypt/: CMakeLists.txt
dep/libtommath/: CMakeLists.txt
dep/lzma/: CMakeLists.txt
dep/mersennetwister/: MersenneTwister.h
dep/mysqllite/: CMakeLists.txt
dep/mysqllite/cmake/: mysql_version.cmake
dep/pklib/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: DetourNavMesh.cpp  DetourNavMeshQuery.cpp
dep/sparse/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
doc/: COMPILATION_HELP.TXT  CharacterDBCleanup.txt  EventAi.txt  FileHeaders.txt  HowToScript.txt  TextTables.txt  UnixInstall.txt
sql/base/: auth_database.sql  characters_database.sql  logon_database.sql  world_database.sql
sql/create/: create_mysql.sql  drop_mysql.sql
sql/old/auth/: 2011_07_16_1_auth_realmlist.sql  2011_07_25_0_auth_logs.sql
sql/old/characters/: 2011_08_19_01_character_talentspec.sql
sql/old/world/: 2011_08_23_00_world_misc.sql
sql/scripts/: world_script_waypoints.sql
sql/updates/: 2011_09_19_world_creature_formations.sql  Aris_New_Item_System_Tables[DO NOT USE ATM].rar
sql/updates/auth/: 2011_07_16_1_auth_realmlist.sql  2011_08_31__auth_realmlist.sql
sql/updates/characters/: 2011_05_27_0_characters_characters.sql  2011_05_28_0_characters_characters.sql  2011_05_31_0_corpse_guildid.sql  2011_06_1_0_characters_characters.sql  2011_06_1_1_characters_characters.sql  2011_07_10_1_characters_currency.sql  2011_07_10_character_Achievementpoints.sql  2011_08_07_00_character_glyphs.sql  2011_08_07_01_character_talentbranchspec.sql  2011_09_25_00_characters_stable_slots.sql  [11]characters_characters.sql
sql/updates/world/: 2011_05_19_0_world_achievement_dbc.sql  2011_05_19_1_world_spell_dbc.sql  2011_05_21_0_world_spell_map.sql  2011_05_24_0_world_spell_dbc.sql  2011_05_27_0_world_spelldificulty_dbc.sql  2011_06_2_0_world_spelldificulty_dbc.sql  2011_07_08_0_world_trillium_string.sql  2011_07_11_0_arena_system.sql  2011_07_11_1_world_creature_onkill_currency.sql.txt  2011_07_12_0_world_battleground_template.sql  2011_07_12_1_world_battleground_template.sql  2011_07_13_0_world_game_event.sql  2011_07_25_world_game_event.sql  2011_07_26_03_world_gameobject_template.sql  2011_07_26_04_world_achievement_dbc.sql  2011_07_26_05_world_game_event_npc_gossip.sql  2011_07_26_06_world_gameobject_template.sql  2011_07_27_01_world_spell_dbc.sql  2011_07_29_00_world_creature.sql  2011_07_29_01_world_npc_trainer.sql  2011_07_30_00_world_trillium_string.sql  2011_07_31_00_world_item_set_names.sql  2011_07_31_01_world_gossip_scripts.sql  2011_07_31_02_world_spelldifficulty_dbc.sql  2011_08_04_00_world_item_template.sql  2011_08_04_01_world_command.sql  2011_08_05_01_world_trillium_string.sql  2011_08_09_world_playercreateinfo.sql  2011_08_09_world_playercreateinfo_action.sql  2011_08_09_world_playercreateinfo_spell.sql  2011_08_20_00_world_gameobject_template.sql  2011_08_22_00_world_trillium_string.sql  2011_08_23_01_world_spell_script_names.sql  2011_08_26_00_world_spell_script_names.sql  2011_09_04_01_world_trillium_string.sql  2011_09_05_01_world_spell_proc_event.sql  2011_09_05_02_world_spell_proc_event.sql  2011_09_05_03_spell_proc_event.sql  2011_09_05_03_world_spell_proc_event.sql  2011_09_05_04_world_spell_proc_event.sql  (+18 more)
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc  resource.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  CMakeLists.txt  VMapDefinitions.h  VMapTools.h
src/server/game/: CMakeLists.txt
src/server/logon/: CMakeLists.txt
src/server/logonserver/: CMakeLists.txt  Main.cpp  Master.cpp  logonserver.conf.dist  logonserver.rc
src/server/logonserver/CommandLine/: CliRunnable.cpp
src/server/logonserver/PrecompiledHeaders/: logonserverPCH.cpp
src/server/logonserver/RemoteAccess/: RASocket.cpp
src/server/logonserver/TCSoap/: TCSoap.cpp  TCSoap.h
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  resource.h  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/extractor/: CMakeLists.txt  DBCFile.cpp  DBCFile.h  FileLoader.cpp  FileLoader.h  MPQ.cpp  MPQ.h  MPQFile.cpp  MPQFile.h  adt.cpp  adt.h  dbc.cpp  dbc.h  headers.h  main.cpp  map.cpp  map.h  misc.cpp  misc.h  typedefs.h  wdt.cpp  wdt.h
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h
src/tools/movements_extractor/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/vmap3_assembler/: CMakeLists.txt  VMapAssembler.cpp
(+1369 files in other folders)
